--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "devise-axios": "^1.0.24",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "semantic-ui-css": "^2.4.1",
