--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
@@ -14,6 +13,7 @@
     "react-big-calendar": "^0.22.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.10",
     "react-flexbox-grid": "^2.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
