--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.1.10",
     "react-flexbox-grid": "^2.1.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.1.2",
